# fdcpa-rule-classifier

./: .env.example  .gitignore  LICENSE  README.md  model_card.md  pyproject.toml
data/: seed_examples.json
notebooks/: 01_generate_dataset.ipynb  02_train_qlora.ipynb  03_eval_comparison.ipynb
src/fdcpa_classifier/: __init__.py  data_gen.py  eval.py  metrics.py  prompts.py  train.py
tests/: test_data_format.py
