[project]
name = "fdcpa-rule-classifier"
version = "0.1.0"
description = "QLoRA fine-tune of Qwen2.5-3B-Instruct for FDCPA rule classification"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "trl>=0.11.0",
    "bitsandbytes>=0.44.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "wandb>=0.18.0",
    "openai>=1.50.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fdcpa_classifier"]
